--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
 
     <h1 style="text-align:center;padding:10px;margin-top:50px;margin-bottom:50px;color:#ED642B;border-left:5px solid #250c77;box-shadow: 0 3px 5px #250c77;">
-        Key Features
+        Key features in report.
     </h1>
 
     <div style="background-color:#add8e6;color:white;margin-bottom:50px;border-left:5px solid #250c77;padding:10px;box-shadow: 0 3px 5px #250c77;">
